# hatch-version-bug

./: CMakeLists.txt  README.md  pyproject.toml
src/: __version__.py
